--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ if(BUILD_TESTING)
 endif()
 
 rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/PluxSensor.msg"
   "msg/PluxMsg.msg"
   "msg/MindroveArmBandMsg.msg"
   "msg/MindroveArmBandEightChannelMsg.msg"
